--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -1800,3 +1800,38 @@ span.sapMBtnInner.sapMBtnEmphasized {
     width: 100% !important;
     border-radius: 6px !important;
 }
+/* Mobile Screens <= 930px */
+@media only screen and (max-width: 930px) {
+    .myclass {
+        flex-direction: column !important;
+        align-items: center !important;
+        width: 100% !important;
+    }
+
+    .myavatar {
+        margin-bottom: 10px !important;
+        align-self: center !important;
+    }
+
+    .sapMFlexBox {
+        flex-wrap: wrap !important;
+    }
+
+    .sapMInputBase,
+    .sapMSlt,
+    .sapMTextArea {
+        width: 100% !important;  /* full width inputs */
+    }
+
+    #Id_ProfileaTable {
+        width: 100% !important;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .myavatar .sapFAvatarImage, 
+    .myavatar .sapFAvatarInitials {
+        width: 4rem !important;
+        height: 4rem !important;
+        font-size: 1.5rem !important;
+    }
+}
