currency formatter in MP

--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -1813,6 +1813,10 @@ span.sapMBtnInner.sapMBtnEmphasized {
         align-self: center !important;
     }
 
+        #id_address {
+        width: 100% !important;
+    }
+
     .sapMFlexBox {
         flex-wrap: wrap !important;
     }
